Demo/infra/monitoring.yaml
############################################################
# Namespace
############################################################
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
