Demo/infra/s2-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-rock-v2
  namespace: ab3test
  labels:
    app: ab3test
    service: rock
    version: 0.2.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ab3test
      service: rock
      version: 0.2.0
  template:
    metadata:
      labels:
        app: ab3test
        service: rock
        version: 0.2.0
    spec:
      serviceAccountName: general-service-account
      containers:
      - name: app
        image: 238435206887.dkr.ecr.ap-southeast-1.amazonaws.com/rock:0.2.0
        ports:
        - containerPort: 3000


############################################################
# Services
############################################################
---
apiVersion: v1
kind: Service
metadata:
  name: service-rock-v2
  namespace: ab3test
  labels:
    app: ab3test
    service: rock
    version: 0.2.0
spec:
  type: NodePort
  selector:
    app: ab3test
    service: rock
    version: 0.2.0
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
