Demo/infra/app.yaml
############################################################
# Namespace
############################################################
apiVersion: v1
kind: Namespace
metadata:
  name: ab3test
  labels:
    app: ab3test
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
    mesh: ab3test-mesh


############################################################
# App Mesh
############################################################
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: ab3test-vs-jukebox
  namespace: ab3test
spec:
  awsName: ab3test-service-jukebox-v1.ab3test.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: ab3test-vn-jukebox-v1
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: ab3test-vs-rap
  namespace: ab3test
spec:
  awsName: ab3test-service-rap-v1.ab3test.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: ab3test-vn-rap-v1
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: ab3test-vs-rock
  namespace: ab3test
spec:
  awsName: ab3test-service-rock-v1.ab3test.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: ab3test-vr-rock


############################################################
# App Mesh Virtual Routers
############################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ab3test-deployment-jukebox-v1
  namespace: ab3test
  labels:
    app: ab3test
    service: jukebox
    version: 0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ab3test
      service: jukebox
      version: 0.1.0
  template:
    metadata:
      labels:
        app: ab3test
        service: jukebox
        version: 0.1.0
    spec:
      serviceAccountName: general-service-account
      containers:
      - name: app
        image: 238435206887.dkr.ecr.ap-southeast-1.amazonaws.com/jukebox:0.1.3000
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 200m
            memory: 0.5Gi
          limits:
            cpu: 400m
            memory: 1Gi
     
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ab3test-deployment-rap-v1
  namespace: ab3test
  labels:
    app: ab3test
    service: rap
    version: 0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ab3test
      service: rap
      version: 0.1.0
  template:
    metadata:
      labels:
        app: ab3test
        service: rap
        version: 0.1.0
    spec:
      serviceAccountName: general-service-account
      containers:
      - name: app
        image: 238435206887.dkr.ecr.ap-southeast-1.amazonaws.com/rap:0.1.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 200m
            memory: 0.5Gi
          limits:
            cpu: 400m
            memory: 1Gi
      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ab3test-deployment-rock-v1
  namespace: ab3test
  labels:
    app: ab3test
    service: rock
    version: 0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ab3test
      service: rock
      version: 0.1.0
  template:
    metadata:
      labels:
        app: ab3test
        service: rock
        version: 0.1.0
    spec:
      serviceAccountName: general-service-account
      containers:
      - name: app
        image: 238435206887.dkr.ecr.ap-southeast-1.amazonaws.com/rock:0.1.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 200m
            memory: 0.5Gi
          limits:
            cpu: 400m
            memory: 1Gi
     

############################################################
# Services
############################################################
---
apiVersion: v1
kind: Service
metadata:
  name: ab3test-service-jukebox-v1
  namespace: ab3test
  labels:
    app: ab3test
    service: jukebox
    version: 0.1.0
spec:
  type: NodePort
  selector:
    app: ab3test
    service: jukebox
    version: 0.1.0
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ab3test-service-rap-v1
  namespace: ab3test
  labels:
    app: ab3test
    service: rap
    version: 0.1.0
spec:
  type: NodePort
  selector:
    app: ab3test
    service: rap
    version: 0.1.0
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ab3test-service-rock-v1
  namespace: ab3test
  labels:
    app: ab3test
    service: rock
    version: 0.1.0
spec:
  type: NodePort
  selector:
    app: ab3test
    service: rock
    version: 0.1.0
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000


############################################################
# Ingress
############################################################
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ab3test
  name: ab3test-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: ab3test
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ab3test-service-jukebox-v1
              servicePort: 80
