Demo/infra/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: dev
  name: ab3test-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: ab3test
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ab3test-service-a
              servicePort: 80
